<resources>
    <string name="app_name">Hockey_tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_app">App</string>
    <string name="menu_previous_matches">Previous Matches</string>
    <string name="menu_new_match">New Match</string>
    <string name="menu_home">Home</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_team_crest" translatable="true">Home Team Crest</string>
    <string name="away_team_crest" translatable="true">Away Team Crest</string>
    <string name="save_match">Save Match</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="view_detail">View detail match</string>

    <string name="text_french" translatable="false">Français</string>
    <string name="text_english" translatable="false">English</string>
    <string name="languages">Languages</string>

    <string name="current_quarter_text">Current quarter : Q</string>
    <string name="title_activity_record">Recording</string>
    <string name="title_activity_detail">Detail match</string>
    <string name="title_home">Resume</string>
    <string name="title_dashboard">Gallery</string>
    <string name="title_notifications">Info</string>
    <string name="pc">PC</string>
    <string name="goal">GOAL</string>
    <string name="stroke">STROKE</string>
    <string name="fault">FAULT</string>
    <string name="outside">OUTSIDE</string>
    <string name="team_away">Team Away</string>
    <string name="team_home">Team Home</string>
    <string name="shot">SHOT</string>
    <string name="match_general_detail">Match general detail</string>
    <string name="match_quarter">Match Quarter </string>
    <string name="detail"> detail</string>
    <string name="info_about_the_app">Info about the app</string>
    <string name="how_the_use_the_app">How the use the app</string>
    <string name="use_the_navigation_drawer_to_navigate_between_the_different_pages">Use the navigation drawer to navigate between the different pages</string>
    <string name="further_explanation_will_be_displayed_in_next_update">Further explanation will be displayed in next update</string>
    <string name="made_by">Made by</string>
    <string name="project_mobile_programming_ece_2020">Project Mobile programming ECE 2020</string>
    <string name="date">date :</string>
    <string name="location">location :</string>
    <string name="pictures_taken_during_match">Pictures taken during match</string>
    <string name="enter_home_team_name">Enter home team name</string>
    <string name="enter_away_team_name">Enter away team name</string>
    <string name="fault_pop">Fault</string>
    <string name="type_of_fault">type of fault</string>
    <string name="kick">kick</string>
    <string name="backstick">backstick</string>
    <string name="stick_interference">stick interference</string>
    <string name="undercutting">undercutting</string>
    <string name="obstruction">obstruction</string>
    <string name="cards">cards?</string>
    <string name="none">None</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="position">Position?</string>
    <string name="_25">25</string>
    <string name="_50">50</string>
    <string name="_75">75</string>
    <string name="_100">100</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="outside_pop">Outside</string>
    <string name="clearance">clearance</string>
    <string name="on_the_side">on the side</string>
    <string name="corner">corner</string>
    <string name="penalty_corner">Penalty Corner</string>
    <string name="converted">Converted:</string>
    <string name="shot_pop">Shot</string>
    <string name="goal_pop">goal</string>
    <string name="missed_outside">missed (outside)</string>
    <string name="missed_keeper">missed (keeper)</string>
    <string name="stroke_pop">Stroke</string>
    <string name="cards_statistics">Cards Statistics</string>
    <string name="total_cards">Total cards</string>
    <string name="total_green_cards">Total green cards</string>
    <string name="total_yellow_cards">Total yellow cards</string>
    <string name="total_red_cards">Total red cards</string>
    <string name="general_match_details">General match details</string>
    <string name="shots_on_goal">shots on goal</string>
    <string name="saves">Saves</string>
    <string name="fault_statistics">fault Statistics</string>
    <string name="number_of_faults">Number of faults</string>
    <string name="fault_statistics_extended">Fault Statistics extended</string>
    <string name="number_of_fault_s_total">Number of fault\'s total</string>
    <string name="number_of_kick_s">Number of Kick\'s</string>
    <string name="number_of_sticks">Number of sticks</string>
    <string name="number_of_back_sticks">Number of Back sticks</string>
    <string name="number_of_obstructions">Number of obstructions</string>
    <string name="number_of_undercuttings">Number of undercuttings</string>
    <string name="number_faults_in_25y">Number faults in 25y</string>
    <string name="number_faults_in_50y">Number faults in 50y</string>
    <string name="number_faults_in_75y">Number faults in 75y</string>
    <string name="number_faults_in_100y">Number faults in 100y</string>
    <string name="outside_statistics">Outside Statistics</string>
    <string name="outside_s_total">Outside\'s total</string>
    <string name="outside_s_clearance_total">Outside\'s clearance total</string>
    <string name="outside_s_on_the_side">Outside\'s on the side</string>
    <string name="corners">Corners</string>
    <string name="pc_statistics">PC statistics</string>
    <string name="number_of_pc_s">Number of pc\'s</string>
    <string name="pc_s_converted">pc\'s converted</string>
    <string name="shots_statistics">Shots Statistics</string>
    <string name="pc_statistics_extended">pc Statistics extended</string>
    <string name="stroke_statistics">Stroke Statistics</string>
    <string name="strokes_converted">Strokes converted</string>
    <string name="quarter_recording">Quarter Recording</string>
    <string name="current_quarter_q">Current quarter : Q</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="home_team_">HOME TEAM</string>
    <string name="away_team">AWAY TEAM</string>
</resources>
