<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/cell_shape_bottom">

        <TextView
            android:id="@+id/team_home_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dip"
            android:layout_marginStart="20dp"
            android:text="@string/team_home"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/shot_team_home_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:onClick="shot"
                android:layout_weight="1"
                android:text="@string/shot"/>

            <Button
                android:id="@+id/fault_team_home_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_shape"
                android:onClick="fault"
                android:text="@string/fault"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/pc_team_home_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:onClick="pc"
                android:layout_weight="1"
                android:text="@string/pc"/>

            <Button
                android:id="@+id/outside_team_home_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_shape"
                android:onClick="outside"
                android:text="@string/outside"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/stroke_team_home_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_shape"
                android:onClick="stroke"
                android:layout_weight="1"
                android:text="@string/stroke"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
