<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.Detailfragment">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/cell_shape_bottom">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dip"
            android:text="@string/fault_statistics"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dip"
            android:textAlignment="center"
            android:text="@string/team_home"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dip"
            android:text="@string/team_away"
            android:textAlignment="center"
            android:textSize="10sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="2"
            android:background="@drawable/cell_shape_except_left"
            android:padding="10dip"
            android:text="@string/number_of_faults"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fault_statistics_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cell_shape_all"
            android:gravity="center"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/fault_statistics_away"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cell_shape_all_darker"
            android:gravity="center"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </TableRow>
</TableLayout>